Fix: Escaping backticks background
Escaping backticks background also known as <code> in html was not visible

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -48,6 +48,14 @@
         padding: 2px 8px 2px 8px;
         font-style: italic;
     }
+    .language-plaintext {
+        background-color: rgba(110,118,129,0.4);
+        color: whitesmoke;
+        white-space: break-spaces;
+        border-radius: 6px;
+        padding: .2em .4em;
+        margin: 0;
+    }
     p small {
         color: $text;
     }
